nixidy/generated/prod/contextforge/Service-contextforge.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: contextforge
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: contextforge
    app.kubernetes.io/service: contextforge
  name: contextforge
  namespace: ai
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: contextforge
    app.kubernetes.io/instance: contextforge
    app.kubernetes.io/name: contextforge
  type: ClusterIP
